SAPR/4/y31.y
%{
#include <stdio.h>
int yyerror(char*);
int yylex();
%}

%start input
%token ONE ZERO

%%
input: input line
    |
    ;

line:
    '\n' {printf("EMPTY LINE\n");}
    | error'\n'{yyerrok;}
    | expr'\n'{printf("CORRECT\n");}
    ;

expr:
    ONE ONE expr_n ZERO;

expr_n:
    expr
    |
    ;

%%

int yyerror(char *s){
    printf("INCORRECT\n");
    return 1;
}

int yylex(){
    int c;
    c = getchar();
    switch(c){
        case '1' : return ONE;
        case '0' : return ZERO;
        case EOF : return 0;
        default : return c;
    }
}

int main(){
    yyparse();
}
